--- a/fresque.html
+++ b/fresque.html
@@ -36,7 +36,7 @@
         
         <div class="article1">
 
-         <h3 class="titre1"> La Fresque de la <strong>Biodiversité</strong></h3>
+         <h3 class="titre1"> La  SUPER Fresque de la <strong>Biodiversité</strong></h3>
          <p> Découvrez au travers d'<strong>un atelier ludique et collaboratif </strong>l'aspect systémique de l'érosion de la biodiversité : la sixième extinction de masse en cours.</p>
          <a href="#participe" class="participe"> Je participe</a>
          </div>
