ajout point d'ancrage nav bar

--- a/fresque_bulma.html
+++ b/fresque_bulma.html
@@ -26,26 +26,24 @@
     </div>
   
     <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-end">
-        <span class="is-flex has-text-weight-bold" style="color: #2D2208;">
-          <a class="navbar-item">
+      <div class="navbar-end has-text-weight-bold" style="color: #2D2208;">
+          <a href="#atelier" class="navbar-item">
             L'atelier
           </a>
     
-          <a class="navbar-item">
+          <a href="#participer" class="navbar-item">
             Comment participer ?
           </a>
   
-          <a class="navbar-item">
+          <a href="#equipe" class="navbar-item">
             L'équipe
           </a>
   
-          <a class="navbar-item">
+          <a href="#animateur" class="navbar-item">
             Devenir animateur
           </a>
-        </span>
-        <div class="has-background-strong-beige is-absolute has-4px-height mr-3 mt separator is-hidden-mobile is-hidden-tablet-only" style="width: 46.5%;top: 50px;"></div>
-        </div>
+        <!-- <div class="has-background-strong-beige is-absolute has-4px-height mr-3 mt separator is-hidden-mobile is-hidden-tablet-only" style="width: 46.5%;top: 50px;"></div>
+        </div> -->
       </div>
     </div>
   </nav>
@@ -117,7 +115,7 @@
     <h6 class="subtitle is-6 is-relative mt-3" style="margin-bottom:100px ;"> IPBES 2019</h6>
   </div>
 
-  <div class="section columns has-background-beige is-flex is-flex-direction-column-mobile"
+  <div id="atelier" class="section columns has-background-beige is-flex is-flex-direction-column-mobile"
     style="justify-content: space-around;">
     <div class="column is-flex is-8 " style="max-width:600px;">
       <h1 class="title is-1 ml-4">
@@ -273,7 +271,8 @@
       • Les conséquences.
     </div>
   </div>
-  <div class="columns mt-6" style="justify-content: space-around;">
+
+  <div id="participer" class="columns mt-6" style="justify-content: space-around;">
     <div class="column is-3" style="max-width:300px;">
       <h1 class="title is-1 ml-4">
         <span>
@@ -353,7 +352,7 @@
       alt="Plante02">
   </div>
 
-  <div class="columns is-justify-content-center mt-6 has-background-beige" style="padding-bottom: 100px;">
+  <div id="equipe" class="columns is-justify-content-center mt-6 has-background-beige" style="padding-bottom: 100px;">
     <div class="column is-6 ml-4">
       <h1 class="title is-2"><span class="has-text-weight-bold"> Les auteurs</span> de l'atelier</h1>
       <div class="separator has-background-primary mt-2">
@@ -536,7 +535,7 @@
     </div>
   </div>
 
-  <div class="columns has-background-clay is-justify-content-center mb-0 pb-6" style="padding-top: 100px;">
+  <div id="animateur" class="columns has-background-clay is-justify-content-center mb-0 pb-6" style="padding-top: 100px;">
     <div class="column is-4">
       <img src="Images/parcours.svg" class="is-flex is-justify-content-flex-end">
     </div>
