--- a/fresque_bulma.html
+++ b/fresque_bulma.html
@@ -82,7 +82,7 @@
       <h6 class="subtitle is-4 py-4 is-relative" style="z-index: 10;"> Découvrez au travers d'<span
           class="has-text-weight-bold">un atelier ludique et collaboratif </span>l'aspect systémique de l'érosion de la
         biodiversité : la sixième extinction de masse en cours.</h6>
-      <button class="button is-primary is-medium has-text-weight-bold">Je participe !</button>
+      <a href=" https://www.billetweb.fr/multi_event.php?user=72404" class="button is-primary is-medium has-text-weight-bold">Je participe !</a>
 
     </div>
     <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque">
@@ -554,9 +554,9 @@
       </div>
       <div class="subtitle is-6 has-text-weight-bold py-6 mb-0">
         Pour donner votre avis suite à une participation, vous pouvez
-        <span class="is-underlined">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeY1xYm9YJdxOwz0kUQn79qSMUWX-rRj2TOrHS31QPhcah1og/viewform"class="is-underlined has-text-weight-bold has-text-classic-dark">
           remplir ce questionnaire.
-        </span>
+        </a>
         <br>
         <br>
         Pour devenir animateur, c'est ici :
