--- a/fresque_bulma.html
+++ b/fresque_bulma.html
@@ -296,6 +296,7 @@
     </div>
   </div>
 
+  <a title="Vente de billets en ligne" href="https://www.billetweb.fr/multi_event.php?multi=11476"  class="shop_frame"  target="_blank"  data-src="https://www.billetweb.fr/multi_event.php?multi=11476"  data-max-width="100%"  data-initial-height="600" data-scrolling="no"  data-id="11476"  data-resize="1">Vente de billets en ligne</a><script type="text/javascript" src="https://www.billetweb.fr/js/export.js"></script>
 
   <div class="columns is-justify-content-center is-flex is-flex-direction-column-mobile pt-6">
     <div class="column is-3">
