modif titre index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bulma_style.css">
   <link rel="stylesheet" href="bulma-timeline.css">
   <link rel="stylesheet" href="bulma.custom.css">
-  <title>Fresque bio</title>
+  <title>La Fresque de la Biodiversité</title>
 </head>
 
 <body>
