commit avant supp tableau participant

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </div>
 
             <div style="margin: auto;">
-              <a href="#animateur" class="navbar-item is-tab pr-0">
-                Devenir animateur
+              <a href="#Post-fresque" class="navbar-item is-tab pr-0">
+                Post-fresque
               </a>
             </div>
           </div>
@@ -115,7 +115,7 @@
     </div>
   </div>
 
-  <div class="has-background-beige mt-3">
+  <div class="has-background-beige mt-3 pb-1">
     <div class="container" style="max-width: 1230px;">
       <div id="atelier" class="columns has-background-beige is-flex is-flex-direction-column-mobile px-4">
         <div class="column is-flex is-5 pl-0" style="margin: auto;">
@@ -207,6 +207,47 @@
       </div>
     </div>
   </div>
+
+  <div class="pt-5 is-hidden-mobile has-background-light-brown">
+    <div class="container mx-4" style="max-width: 1230px;">
+      <div class="columns">
+        <div class="column is-3">
+          <img class="img" src="Images/pictoWall-clock.svg">
+          <div class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
+            3 heures d'atelier
+          </div>
+          <div class="has-text-danger-light is-6 pb-6">
+            • 20 minutes : comprendre un écosystème. <br>
+            • 1 heure : 5 lots pour 45 cartes. <br>
+            • 40 minutes : créativité + restitution. <br>
+            • 1 heure : débrief de l'atelier  
+          </div>
+        </div>
+        <div class="column is-3">
+          <img class="img" src="Images/pictoPeople.svg">
+          <div class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
+            Participants illimités
+          </div>
+          <div class="has-text-danger-light is-6 pb-6">
+            • Par groupe de 5 à 7 personnes. <br>
+            • 1 animateur expert pour 2 groupes
+          </div>
+        </div>
+        <div class="column is-3">
+          <img class="img" src="Images/pictoPuzzle.svg">
+          <div class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
+            Participants illimités
+          </div>
+          <div class="has-text-danger-light is-6 pb-6">
+            • Par groupe de 5 à 7 personnes. <br>
+            • 1 animateur expert pour 2 groupes
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
   <div class="rules mt-5 is is-hidden-mobile has-background-beige">
     <table class="rulesTable">
@@ -536,7 +577,7 @@
       </div>
     </div>
 
-    <div id="animateur" class="has-background-clay">
+    <div id="Post-fresque" class="has-background-clay">
       <div class="container px-4" style="max-width: 1230px;">
         <div class="columns has-background-clay is-justify-content-center mb-0 pb-6" style="padding-top: 100px;">
           <div class="column is-5">
@@ -558,15 +599,17 @@
             <div class="subtitle is-6 has-text-weight-bold py-6 mb-0">
               Pour donner votre avis suite à une participation, vous pouvez
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeY1xYm9YJdxOwz0kUQn79qSMUWX-rRj2TOrHS31QPhcah1og/viewform"
-                class="is-underlined has-text-weight-bold has-text-classic-dark">
+                class="is-underlined has-text-weight-bold has-text-classic-dark has-hovering">
                 remplir ce questionnaire.
               </a>
               <br>
               <br>
-              Vous voulez aller plus loin et devenir animateur 
+              Vous voulez aller plus loin et devenir animateur ? 
+              <br>
+              <br>
+              Nous vous invitons à contacter
+              votre animateur suite au mail post-fresque.
             </div>
-            <button class="button is-primary is-medium">Je deviens animateur</button>
-
           </div>
         </div>
       </div>
