avant media queries

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-end has-text-weight-bold" style="color: #2D2208;">
             <div style="margin: auto;">
-              <a href="#atelier" class="navbar-item is-tab pl-0">
+              <a href="#atelier" class="navbar-item is-tab">
                 L'atelier
               </a>
             </div>
@@ -48,7 +48,7 @@
             </div>
 
             <div style="margin: auto;">
-              <a href="#Post-fresque" class="navbar-item is-tab pr-0">
+              <a href="#Post-fresque" class="navbar-item is-tab">
                 Post-fresque
               </a>
             </div>
@@ -70,8 +70,12 @@
             biodiversité : la sixième extinction de masse en cours.</h6>
           <a href=" https://www.billetweb.fr/multi_event.php?user=72404"
             class="button is-primary is-medium has-text-weight-bold">Je participe !</a>
-
+            <div>
+          <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque" style="max-width: 900px;">
+          <img id="img1" class="overlay" src="Images/plante01.svg" alt="Plante" style="max-width: 250px;">
+          </div>
         </div>
+
         <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque" style="max-width: 900px;">
         <img id="img1" class="overlay" src="Images/plante01.svg" alt="Plante" style="max-width: 250px;">
       </div>
@@ -220,7 +224,7 @@
             • 20 minutes : comprendre un écosystème. <br>
             • 1 heure : 5 lots pour 45 cartes. <br>
             • 40 minutes : créativité + restitution. <br>
-            • 1 heure : débrief de l'atelier  
+            • 1 heure : débrief de l'atelier
           </div>
         </div>
         <div class="column is-3">
@@ -245,58 +249,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-
-
-  <div class="rules mt-5 is is-hidden-mobile has-background-beige">
-    <table class="rulesTable">
-      <thead>
-        <tr>
-          <th> <img class="img" src="Images/pictoWall-clock.svg">
-          </th>
-          <th>
-            <img class="img" src="Images/pictoPeople.svg">
-          </th>
-          <th>
-            <img class="img" src="Images/pictoPuzzle.svg">
-          </th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <tr>
-          <td class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
-            3 heures d'atelier
-          </td>
-          <td class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
-            Participants illimités
-          </td>
-          <td class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
-            5 modules
-          </td>
-        </tr>
-        <tr>
-          <td class="has-text-danger-light is-6 pb-6">
-            • 20 minutes : comprendre un écosystème. <br>
-            • 1 heure : 5 lots pour 45 cartes. <br>
-            • 40 minutes : créativité + restitution. <br>
-            • 1 heure : débrief de l'atelier
-          </td>
-          <td class="has-text-danger-light is-6 pb-6">
-            • Par groupe de 5 à 7 personnes. <br>
-            • 1 animateur expert pour 2 groupes
-          </td>
-          <td class="has-text-danger-light is-6 pb-6">• Définition de la biodiversité <br>
-            • Les services écosystémiques rendus <br>
-            • L'impact de l'Homme. <br>
-            • Les 5 grandes pressions. <br>
-            • Les conséquences.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
   </div>
 
   <div class="has-background-light-brown">
@@ -604,7 +556,7 @@
               </a>
               <br>
               <br>
-              Vous voulez aller plus loin et devenir animateur ? 
+              Vous voulez aller plus loin et devenir animateur ?
               <br>
               <br>
               Nous vous invitons à contacter
