ajout media queries centré

--- a/index.html
+++ b/index.html
@@ -70,13 +70,10 @@
             biodiversité : la sixième extinction de masse en cours.</h6>
           <a href=" https://www.billetweb.fr/multi_event.php?user=72404"
             class="button is-primary is-medium has-text-weight-bold">Je participe !</a>
-            <div>
-          <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque" style="max-width: 900px;">
-          <img id="img1" class="overlay" src="Images/plante01.svg" alt="Plante" style="max-width: 250px;">
-          </div>
+            
         </div>
 
-        <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque" style="max-width: 900px;">
+        <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque" style="max-width: 700px;">
         <img id="img1" class="overlay" src="Images/plante01.svg" alt="Plante" style="max-width: 250px;">
       </div>
     </div>
@@ -123,17 +120,17 @@
     <div class="container" style="max-width: 1230px;">
       <div id="atelier" class="columns has-background-beige is-flex is-flex-direction-column-mobile px-4">
         <div class="column is-flex is-5 pl-0" style="margin: auto;">
-          <h1 class="title is-2">
+          <h1 class="title is-2 has-text-centered-mobile">
             <span>
               <span class="has-text-weight-bold">Comment se déroule</span> une fresque de la biodiversité ?
-              <div class="separator has-background-primary mt-5">
+              <div class="separator has-background-primary mt-5 has-margin-auto-mobile">
               </div>
             </span>
           </h1>
         </div>
         <div class="column is-4"></div>
-        <div class="column is-3">
-          <img class="img" src="Images/cartesFresque.svg" alt="cartesFresque">
+        <div class="column has-text-centered-mobile is-3">
+          <img class="img " src="Images/cartesFresque.svg" alt="cartesFresque">
         </div>
       </div>
 
@@ -212,10 +209,10 @@
     </div>
   </div>
 
-  <div class="pt-5 is-hidden-mobile has-background-light-brown">
-    <div class="container mx-4" style="max-width: 1230px;">
-      <div class="columns">
-        <div class="column is-3">
+  <div class="pt-5 is-hidden-mobile has-background-beige">
+    <div class="container pr-5 px-2" style="max-width: 1230px;">
+      <div class="columns ">
+        <div class="column is-3 has-background-light-brown">
           <img class="img" src="Images/pictoWall-clock.svg">
           <div class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
             3 heures d'atelier
@@ -227,7 +224,7 @@
             • 1 heure : débrief de l'atelier
           </div>
         </div>
-        <div class="column is-3">
+        <div class="column is-3 has-background-light-brown">
           <img class="img" src="Images/pictoPeople.svg">
           <div class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
             Participants illimités
@@ -237,7 +234,7 @@
             • 1 animateur expert pour 2 groupes
           </div>
         </div>
-        <div class="column is-3">
+        <div class="column is-3 has-background-light-brown">
           <img class="img" src="Images/pictoPuzzle.svg">
           <div class="title is-4 py-4 has-text-danger-light has-text-weight-bold">
             Participants illimités
@@ -284,11 +281,11 @@
     <div class="has-background-clay">
       <div class="container" style="max-width: 1230px;">
         <div id="participer" class="columns pt-6 px-4">
-          <div class="column is-3 px-0" style="max-width:300px;">
-            <h1 class="title is-1 ">
+          <div class="column is-3 px-0 has-margin-auto-mobile" style="max-width:300px;">
+            <h1 class="title is-1 has-text-centered-mobile  ">
               <span>
                 <span class="has-text-weight-bold">Comment</span> participer ?
-                <div class="separator has-background-primary mt-2">
+                <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
                 </div>
               </span>
             </h1>
@@ -336,10 +333,10 @@
     <div class="container px-4" style="max-width: 1230px;">
       <div class="columns pt-6 " style="padding-bottom: 100px;">
         <div class="column is-6 pl-0">
-          <h1 class="title is-2"><span class="has-text-weight-bold"> Les auteurs</span> de l'atelier</h1>
-          <div class="separator has-background-primary mt-2">
+          <h1 class="title is-2 has-text-centered-mobile"><span class="has-text-weight-bold"> Les auteurs</span> de l'atelier</h1>
+          <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
           </div>
-          <div class="culumns is-12 is-flex mt-6 is-flex-direction-column-mobile">
+          <div class="culumns is-12 is-flex mt-6 is-flex is-flex-direction-column-mobile is-align-content-center-mobile">
             <div class="column is-6 has-max-width mx-mobile">
               <figure class="image is-relative" style="width: 180px; height: 160px;">
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
@@ -430,20 +427,20 @@
             </div>
           </div>
 
-          <h1 class="title is-2 mt-6" style="max-width: 300px;">
+          <h1 class="title is-2 mt-6 has-margin-auto-mobile" style="max-width: 300px;">
             Avec la
             <span class="has-text-weight-bold">
               coopération
             </span>
             de
           </h1>
-          <div class="separator has-background-primary mt-2">
+          <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
           </div>
-          <figure class="image is-relative">
-            <div class="large-rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;"></div>
+          <figure class="image is-relative is-flex is-justify-content-center-mobile">
+            <div class="large-rectangle is-absolute is-hidden-mobile" style="top: -10px; left: -10px; border-radius: 5px;"></div>
             <img src="Images/logoOFB-LQ.png" class="mt-5">
           </figure>
-          <h4 class="title is-4 has-text-weight-bold">
+          <h4 class="title is-4 has-text-weight-bold has-text-align-center-mobile">
             L'OFB : Office Français de la Biodiversité
           </h4>
         </div>
