responsivness columns mobile

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     </div>
   </div>
 
-  <div class="has-background-beige mt-3 pb-1">
+  <div class="has-background-beige mt-3 pb-1 is-relative">
     <div class="container" style="max-width: 1230px;">
-      <div id="atelier" class="columns has-background-beige is-flex is-flex-direction-column-mobile px-4">
-        <div class="column is-flex is-5 pl-0" style="margin: auto;">
+      <div class="columns has-background-beige px-4" style="max-width: 100%;">
+        <div class="column is-flex is-5 pl-0">
           <h1 class="title is-2 has-text-centered-mobile">
             <span>
               <span class="has-text-weight-bold">Comment se déroule</span> une fresque de la biodiversité ?
@@ -207,6 +207,7 @@
           réfléchissant de manière collaborative aux solutions pour agir face à l'érosion de la biodiversité.</div>
       </div>
     </div>
+    <div id="atelier" class="is-absolute" style="top: -100px;"></div>
   </div>
 
   <div class="pt-5 is-hidden-mobile has-background-beige">
@@ -278,9 +279,9 @@
       </div>
     </div>
 
-    <div class="has-background-clay">
+    <div class="has-background-clay is-relative">
       <div class="container" style="max-width: 1230px;">
-        <div id="participer" class="columns pt-6 px-4">
+        <div class="columns pt-6 px-4" style="width: 100%;">
           <div class="column is-3 px-0 has-margin-auto-mobile" style="max-width:300px;">
             <h1 class="title is-1 has-text-centered-mobile  ">
               <span>
@@ -314,6 +315,7 @@
           <script type="text/javascript" src="https://www.billetweb.fr/js/export.js"></script>
         </div>
       </div>
+      <div id="participer" class="is-absolute" style="top: -50px;"></div>     
     </div>
   </div>
 
@@ -329,7 +331,7 @@
 
   </div>
 
-  <div id="equipe" class="has-background-beige">
+  <div class="has-background-beige is-relative">
     <div class="container px-4" style="max-width: 1230px;">
       <div class="columns pt-6 " style="padding-bottom: 100px;">
         <div class="column is-6 pl-0">
@@ -563,6 +565,7 @@
         </div>
       </div>
     </div>
+    <div id="equipe" class="is-absolute" style="top: -50px;"></div>
   </div>
   </div>
 
