ajout nb de requetes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>La Fresque de la Biodiversité</title>
 </head>
 
-<body>
+<body class="scroll-behavior: smooth;">
   <div class="has-background-dark-beige is-fullwidth " style="height: 100px; z-index: 1000;">
     <nav class="navbar  is-fixed-top is-max-desktop has-background-dark-beige "
       style="width: 100%; margin: auto; height: 100px;">
@@ -439,7 +439,6 @@
           <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
           </div>
           <figure class="image is-relative is-flex is-justify-content-center-mobile">
-            <div class="large-rectangle is-absolute is-hidden-mobile" style="top: -10px; left: -10px; border-radius: 5px;"></div>
             <img src="Images/logoOFB-LQ.png" class="mt-5">
           </figure>
           <h4 class="title is-4 has-text-weight-bold has-text-align-center-mobile">
@@ -598,9 +597,9 @@
           </div>
 
           <h1 class="subtitle is-6 has-text-beige mt-6 ">
-            <span class="has-text-weight-bold has-text-beige"> ressources sont précieuses, et votre temps aussi.</span>
-            Cette page pèse <span class="has-text-weight-bold has-text-beige">XX Ko</span> et a demandé <span
-              class="has-text-weight-bold has-text-beige">XX requêtes.</span>
+            <span class="has-text-weight-bold has-text-beige">Les ressources sont précieuses, et votre temps aussi.</span>
+            Cette page pèse <span class="has-text-weight-bold has-text-beige">305 Ko</span> et a demandé <span
+              class="has-text-weight-bold has-text-beige">26 requêtes.</span>
             Une page web en moyenne dépasse les 2000 Ko et demande 70 requêtes.
 
             <br>
@@ -622,16 +621,16 @@
                 Retrouvez nous sur :
               </h1>
             </div>
-            <div>
+            <div class="is-flex" style="align-items: center;">
               <a href="https://www.linkedin.com/company/fresquedelabiodiversit%C3%A9/"><img
                   src="Images/pictoBulleIN.svg"></a>
               <a href="https://www.linkedin.com/company/fresquedelabiodiversit%C3%A9/"
-                class="is-underlined pl-1 is-orange">Linkedin</a>
+                class="is-underlined pl-1" style="color: #E56B06;">Linkedin</a>
             </div>
-            <div>
+            <div class="is-flex" style="align-items: center;">
               <a href="https://www.facebook.com/" class="is-underlined pl-1 is-orange"><img
                   src="Images/pictoBulleFB.svg"></a>
-              <a href="https://www.facebook.com/" class="is-underlined pl-1 is-orange">Facebook</a>
+              <a href="https://www.facebook.com/" class="is-underlined pl-1" style="color: #E56B06;">Facebook</a>
             </div>
           </div>
         </div>
