ajout smooth scroll

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="scroll-behavior:smooth">
 
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <title>La Fresque de la Biodiversité</title>
 </head>
 
-<body class="scroll-behavior: smooth;">
+<body >
   <div class="has-background-dark-beige is-fullwidth " style="height: 100px; z-index: 1000;">
     <nav class="navbar  is-fixed-top is-max-desktop has-background-dark-beige "
       style="width: 100%; margin: auto; height: 100px;">
