--- a/index.html
+++ b/index.html
@@ -585,7 +585,8 @@
             <br>
             <br>
             Conçu avec sobriété et engagement par <a href="https://telescoop.fr" target="_blank"
-              class="has-hovering has-text-beige is-underlined">TelesCoop</a> (développement) et Léopoldine Mennessier
+              class="has-hovering has-text-beige is-underlined">TelesCoop</a> (développement) et <a href="https://www.linkedin.com/in/l%C3%A9opoldine-mennessier-78378998/"
+              target="_blank" class="has-hovering has-text-beige is-underlined">Léopoldine Mennessier</a>
             (design).
           </h1>
         </div>
@@ -642,9 +643,7 @@
   </div>
 
 
-  <script type="text/javascript">
-    let atelier =document.getElementById('atelier')
-  </script>
+  
 
 </body>
 
