--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
         </div>
 
         <div class="box p-0">
-          <a title="Vente de billets en ligne" href="https://www.billetweb.fr/multi_event.php?multi=11476"
-            class="shop_frame" target="_blank" data-src="https://www.billetweb.fr/multi_event.php?multi=11476"
+          <a title="Vente de billets en ligne" href="https://www.billetweb.fr/multi_event.php?multi=u82762"
+            class="shop_frame" target="_blank" data-src="https://www.billetweb.fr/multi_event.php?multi=u82762"
             data-max-width="100%" data-initial-height="600" data-scrolling="no" data-id="11476" data-resize="1">Vente de
             billets en ligne</a>
           <script type="text/javascript" src="https://www.billetweb.fr/js/export.js"></script>
@@ -447,7 +447,7 @@
                 <h1 class="title is-5 has-text-weight-bold py-4">
                   Deloitte
                 </h1>
-                <a href="https://www2.deloitte.com/fr/fr.html" target="_blank"><img src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2"
+                <a href="https://www2.deloitte.com/fr/fr/services/sustainability.html" target="_blank"><img src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2"
                     style="height: 30.74px; width: 31.47px;"></a>
               </span>
               <h1 class="subtitle is-6 is-italic figure-quote">
