[*] ajout scrolling sur l'iframe

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <div class="box p-0">
           <a title="Vente de billets en ligne" href="https://www.billetweb.fr/multi_event.php?multi=u82762"
             class="shop_frame" target="_blank" data-src="https://www.billetweb.fr/multi_event.php?multi=u82762"
-            data-max-width="100%" data-initial-height="600" data-scrolling="no" data-id="11476" data-resize="1">Vente de
+            data-max-width="100%" data-initial-height="600" data-scrolling="yes" data-id="11476" data-resize="1">Vente de
             billets en ligne</a>
           <script type="text/javascript" src="https://www.billetweb.fr/js/export.js"></script>
         </div>
