Ajoute le bloc contactez-nous

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="bulma_style.css">
   <link rel="stylesheet" href="bulma-timeline.css">
   <link rel="stylesheet" href="bulma.custom.css">
+  <link rel="stylesheet" href="style.css">
   <title>La Fresque de la Biodiversité</title>
 </head>
 
@@ -322,8 +323,8 @@
     </div>
   </div>
 
-  <div class="is-flex is-justify-content-center m-0 pt-6 has-background-clay">
-    <div class="is-size-3 has-text-primary">
+  <div class="is-flex is-justify-content-center m-0 pt-6 has-background-clay px-6">
+    <div class="is-size-3 has-text-primary has-text-centered">
       Ils sont déjà <strong class="has-text-primary">plus de 11 000</strong> à avoir participé !
     </div>
   </div>
@@ -483,7 +484,7 @@
         </div>
 
 
-        <div class="column is-5 is-hidden-mobile">
+        <div class="column is-6 is-hidden-mobile">
           <h2 class="title is-2">
             <span class="has-text-weight-bold" style="max-width: 250px;">Les étapes</span> du projet
           </h2>
@@ -559,7 +560,29 @@
               </div>
             </div>
           </div>
+          <div class="has-background-dark-beige p-6 mt-6 is-relative" style="border-radius: 20px;">
+            <div class="is-relative" style="z-index: 1;">
+              <div class="is-size-3 has-text-weight-bold" style="z-index: 1;"><span class="has-background-dark-beige">Une question ?</span></div>
+              <div class="is-size-5 has-text-weight-bold" style="z-index: 1;"><span class="has-background-dark-beige">Une envie ? Une remarque ?</span></div>
+              <a href="mailto:fresquedelabiodiversite@gmail.com" class="button is-primary is-uppercase has-text-weight-bold mt-4" style="z-index: 1;">
+                Contactez nous !
+              </a>
+            </div>
+            <div class="is-absolute is-hidden-touch" style="bottom: 20px; right: 20px; z-index: 0">
+              <img src="Images/contact_us.svg" style="height: 200px;">
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+
+    <div class="has-background-dark-beige p-6 mt-6 is-relative is-hidden-tablet">
+      <div class="is-size-3 has-text-weight-bold has-text-centered">Une question ?</div>
+      <div class="is-size-5 has-text-weight-bold has-text-centered">Une envie ? Une remarque ?</div>
+      <div class="is-flex is-justify-content-center">
+        <a href="mailto:fresquedelabiodiversite@gmail.com" class="button is-primary is-uppercase has-text-weight-bold mt-4" >
+          Contactez nous !
+        </a>
       </div>
     </div>
 
